# motorsport_calendar_api

./: .env  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  benchmark.sh  build_and_package.sh  build_database.sh  conf.yml  log4rs.yml  makefile  package.sh  prod_conf.yml  run.sh  stress.sh  test_data.sql
data/dtm/: dtm.csv  dtm.yml
data/formula1/: formula1.csv  formula1.yml
data/gp2/: gp2.yml
data/gp3/: gp3.yml
data/indycar/: indycar.yml
migrations/20171019211358_events/: up.sql
migrations/20171019211407_sessions/: up.sql
migrations/20171026192935_datetest/: down.sql  up.sql
migrations/2018-04-15-091115_users/: up.sql
src/: .data.rs.swp  auth.rs  bcrypt_helper.rs  config.rs  data.rs  data_validator.rs  database.rs  event.rs  event_loader.rs  event_manager.rs  main.rs  model.rs  round.rs  schema.rs  test_functions.rs  webserver.rs
src/admin/: create.rs  delete.rs  mod.rs  read.rs  update.rs
src/model/: events.rs  mod.rs  sessions.rs  users.rs
src/webserver/: delete.rs  mod.rs  post.rs  put.rs  read.rs  webserver.rs
test/data/: test_data.yml
www/static/: script.js  stylesheet.css
www/templates/: create_event.html.tera  create_session.html.tera  created_event.html.tera  created_session.html.tera  event.html.tera  events.html.tera  index.html.tera  session.html.tera  sport_type.html.tera  sport_types.html.tera
www/templates/subtemplates/: jquery_includes.html.tera
