[package]
name = "motorsport_calendar_api"
version = "0.1.0"
authors = ["Michael Ashe <mickjohnashe@hotmail.com>"]

[[bin]]
name = "motorsport_calendar_api"
path = "src/main.rs"

[[bin]]
name = "bcrypt_helper"
path = "src/bcrypt_helper.rs"

# [[bin]]
# name = "admin_page"
# path = "src/admin_page.rs"

[dependencies]
bcrypt = "0.1.5"
rocket = "0.3.17"
rocket_codegen = "0.3.17"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_yaml = "0.8.6"
serde_json = "1.0.32"
log = "0.4"
env_logger = "0.4"
log4rs = "0.8"
lazy_static = "0.2.2"
clap = "2.32"
diesel = { version = "1.3", features = ["sqlite", "chrono"] }
dotenv = "0.10.1"
chrono = "0.4"
tera = "0.10.10" # Just need this for the context struct
base64 = "0.9.0"
failure = "0.1.3"

[dependencies.motorsport_calendar_common]
git = "https://github.com/mickjohn/motorsport_calendar_common.git"

# [dev-dependencies]
# rocket = { version = "0.3.2", features = ["testing"] }

[dependencies.rocket_contrib]
version = "0.3.17"
default-features = false
features = ["tera_templates", "json"]

[dev-dependencies]
# stainless = "0.1.12"
rusqlite = "0.13.0"
diesel = { version = "1.3", features = ["sqlite", "chrono"] }
rand = "0.4.2"
