[package]
name = "motorsport_calendar_api"
version = "0.1.0"
authors = ["Michael Ashe <mickjohnashe@hotmail.com>"]

[[bin]]
name = "motorsport_calendar_api"
path = "src/main.rs"

[[bin]]
name = "bcrypt_helper"
path = "src/bcrypt_helper.rs"

[dependencies]
bcrypt = "0.2.1"
rocket = "0.4.0"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_yaml = "0.8.8"
serde_json = "1.0.33"
log = "0.4.6"
env_logger = "0.6.0"
log4rs = "0.8.1"
lazy_static = "1.2.0"
clap = "2.32.0"
diesel = { version = "1.4.6", features = ["sqlite", "chrono"] }
dotenv = "0.13.0"
chrono = "0.4.6"
tera = "0.11.20"
base64 = "0.10.0"
failure = "0.1.3"

[dependencies.motorsport_calendar_common]
git = "https://github.com/mickjohn/motorsport_calendar_common.git"
rev = "ab67e77b6b0d519709e0d432f22ba4c495b33732"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["tera_templates", "json"]

[dev-dependencies]
rusqlite = "0.13.0"
diesel = { version = "1.4.6", features = ["sqlite", "chrono"] }
rand = "0.6.1"
